<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:hint="@string/distancia"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_de_quilometros"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:hint="@string/preco"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_por_litro"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:hint="@string/autonomia"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kmsporlitro"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textSize="20sp"
        android:text="@string/gastototal"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rstotal"
        android:textSize="40sp"
        android:textColor="@color/darkBlue"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/calcular"
        android:textColor="@color/white"
        />


</LinearLayout>